@@ -4,3 +4,4 @@
 [#129] Create a new adapter called PostgresLobeDB
 [das-query-engine#214] Add retrieve_all_atoms method
 [#124] Changed count_atoms() to return more accurate numbers
+[das-query-engine#197] Changed get_all_links() to return a tuple
